--- a/config/database.yml
+++ b/config/database.yml
@@ -1,9 +1,7 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
 development:
+  #host: localhost
+  #adapter: postgresql
+  #database: db/development
   adapter: sqlite3
   database: db/development.sqlite3
   pool: 5
@@ -13,12 +11,18 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
+  #host: localhost
+  #adapter: postgresql
+  #database: db/test
   adapter: sqlite3
   database: db/test.sqlite3
   pool: 5
   timeout: 5000
 
 production:
+  #host: localhost
+  #adapter: postgresql
+  #database: db/production
   adapter: sqlite3
   database: db/production.sqlite3
   pool: 5
